Revision history for AnyEvent::HTTP

TODO: provide lwp_request function that takes an lwp http requets and returns a http response.
TODO: httpbis: $location = URI->new_abs($location, "$scheme://$host:$port$path_query")->as_string;
TODO: set_proxy hook
TODO: use proxy hook
TODO: ip6 literals in url
TODO: maybe read big chunks in smaller portions for chunked-encoding + on_body.

2.15 Wed Nov 14 23:22:07 CET 2012
	- use the recurse parameter to also limit the number of retries to be
          done, avodiing endless loops with broken servers, as reported
          by Carl Chambers.

2.14 Sun Apr 22 14:57:51 CEST 2012
	- Time::Local::timegm croaks on out-of-range values. Don't let
          this disturb AnyEvent::HTTP (reported by: tell me, I forgot...).

2.13 Wed Jul 27 17:53:58 CEST 2011
	- garbled chunked responses caused AnyEvent::HTTP to malfunction
          (patch by Dmitri Melikyan).
        - fix GET => HEAD in one case in the documentation (James Bromberger).

2.12 Tue Jun 14 07:22:54 CEST 2011
	- fix a possible 'Can't call method "destroyed"' error (which would
          have been reported by Carl Chambers).

2.11 Tue May 10 14:33:28 CEST 2011
	- the keepalive session cache wouldn't take port and scheme into account
          when reusing connection - potentially causing information leaks
          (reported by Nick Kostirya).
	- bump AnyEvent dependency version (reported by Richard Harris).

2.1  Thu Feb 24 13:11:51 CET 2011
	- the keepalive and persistent parameters were actually named
          differently in the code - they now work as documented.
        - fix a bug where callbacks would sometimes never be called when
          the request timeout is near or below the persistent connection
          timeout (testcase by Cindy Wang).
        - destroying the guard would have no effect when a request was
          recursing or being retired.

2.04 Sat Feb 19 07:45:24 CET 2011
	- "proxy => undef" now overrides any global proxy when specified.