@@ -7,6 +7,8 @@ TODO: use proxy hook
 TODO: ip6 literals in url
 TODO: maybe read big chunks in smaller portions for chunked-encoding + on_body.
 
+	- add lots of known idempotent methods from httpbis.
+
 2.15 Wed Nov 14 23:22:07 CET 2012
 	- use the recurse parameter to also limit the number of retries to be
           done, avodiing endless loops with broken servers, as reported
